# GoldMetrics

./: .gitignore  LICENSE  logging.py  pyproject.toml  test.py
.github/workflows/: pull-request-checks.yml  release.yml
src/backend/: main.py  pyproject.toml
src/backend/app/: __init__.py
src/backend/app/application/: __init__.py  event_handlers.py  events.py  ports.py  services.py
src/backend/app/domain/: __init__.py  models.py
src/backend/app/infrastructure/: __init__.py  bootstrap.py  config.py  container.py  logging.py
src/backend/app/infrastructure/adapters/: __init__.py  api.py  event_bus.py  notifications.py  repository.py  unit_of_work.py
src/backend/app/infrastructure/database/: __init__.py  orm.py
src/backend/app/infrastructure/database/alembic/: env.py
src/backend/app/infrastructure/database/alembic/versions/: 1d008be67c76_.py
src/backend/app/infrastructure/integrations/: __init__.py
src/backend/app/presentation/: __init__.py  endpoints.py  main.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/application/: test_services.py
src/backend/tests/domain/: test_models.py
src/backend/tests/infrastructure/: test_logging.py
src/backend/tests/infrastructure/adapters/: test_api.py  test_event_bus.py  test_notifications.py  test_repository.py  test_unit_of_work.py
src/backend/tests/infrastructure/database/: test_orm.py
